Fixed index content so that text wrapped around image

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,13 @@
 body{
+    width:100%;
+    padding: 5% auto;
     background-image: url('../images/funky-lines.png');
     background-repeat: repeat;
     background-size: auto;
 }
 
 header{
+    width:100%;
     background-color: #fff;
     padding: 0 5%;
 }
@@ -26,10 +29,19 @@ header{
     text-decoration: underline;
 }
 
-.container-md{
-    margin-top:2em;
+.navbar-toggle{
+    color:#000;
+}
+
+section{
+    margin: 2em 0 0 6%;
     padding: 1.5em 2.5%;
     background-color: #fff;
+} 
+
+.media img{
+    width: 40%;
+    margin-bottom: 0;
 }
 
 footer{
@@ -37,3 +49,23 @@ footer{
     bottom:0;
     padding:.75em 0;
 }
+
+
+
+
+
+
+// Extra small devices (portrait phones, less than 576px)
+// No media query since this is the default in Bootstrap
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
